edited gitignore and removed unneeded files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+PyCitySchools.ipynb
+function.ipynb
+cleaning_student_names.ipynb
+cleaning_data.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
